# solrover-market

./: .gitignore  .gitmodules  Cargo.toml  claude.md  roadmap.md  solrover.md
docs/: executive-brief.md  percolator-risk-engine.md
docs/integration/: anchor.md  rust.md  surfpool.md
perp-engine/: Cargo.toml
perp-engine/src/: lib.rs
perp-engine/tests/: integration.rs
perp-program/: .pnp.cjs  Anchor.toml  Cargo.toml  txtx.yml
perp-program/programs/perp-program/: Cargo.toml
perp-program/programs/perp-program/src/: lib.rs
perp-program/runbooks/: deploy.tx
perp-program/tests/: Cargo.toml
perp-program/tests/src/: lib.rs  test_perp.rs
simple-amm/: Cargo.toml
simple-amm/src/: lib.rs
