[workspace]
members = [
    "programs/*",
]
# tests/ has heavy solana-sdk deps (blake3→constant_time_eq 0.4 / edition2024)
# that the Solana BPF toolchain (Cargo 1.79) can't parse. Run it standalone.
exclude = ["tests"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
